# app/user/internal/server/http.go
@@ -7,19 +7,20 @@ import (
 	tracesdk "go.opentelemetry.io/otel/sdk/trace"
 
 	"github.com/go-kratos/kratos/v2/log"
+
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/middleware/tracing"
 	"github.com/go-kratos/kratos/v2/transport/http"
 )
 
-// NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.UserService, logger log.Logger, tp *tracesdk.TracerProvider) *http.Server {
+func NewHTTPServer(c *conf.Server, token *conf.Token, userService *service.UserService, logger log.Logger, tp *tracesdk.TracerProvider) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
 			tracing.Server(
 				tracing.WithTracerProvider(tp),
 			),
+			selectorFn(token.Secret),
 		),
 	}
 	if c.Http.Network != "" {
@@ -32,6 +33,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.UserService, logger log.Logg
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterUserServiceHTTPServer(srv, greeter)
+	v1.RegisterUserServiceHTTPServer(srv, userService)
+
 	return srv
 }
